# extend-service-extension-python

./: .dockerignore  .env.template  .gitignore  .pylintrc  Dockerfile  Dockerfile.app  Dockerfile.cdll  Dockerfile.gateway  Jenkinsfile  Jenkinsfile.github  Makefile  README.md  docker-compose.cdll.yml  docker-compose.yaml  docker-compose.yml  proto.sh  pyproject.toml  requirements.txt  supervisord.conf  wrapper.sh
.github/workflows/: upload.yaml
docs/: 0-toc.md  1-introduction.md  2-prerequisites.md  4-installation-and-setup.md  5-project-structure.md  6-creating-new-endpoint.md  7-writing-service-implementation.md  8-integrating-with-cloudsave.md  9-run-and-testing.md
gateway/: go.mod  go.sum  main.go
proto/app/: guildService.proto  permission.proto
src/accelbyte_grpc_plugin/: app.py  ctypes.py  utils.py
src/accelbyte_grpc_plugin/interceptors/: authorization.py  logging.py  metrics.py
src/accelbyte_grpc_plugin/options/: grpc_health_check.py  grpc_reflection.py  loki.py  prometheus.py  zipkin.py
src/app/: __main__.py  utils.py
src/app/proto/: __init__.py  permission_pb2.py  permission_pb2.pyi  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
src/app/services/: guild_service.py  my_service.py
test/accelbyte_grpc_plugin_tests/: __init__.py
test/app_tests/: __main__.py
test/app_tests/services/: __init__.py  guild_service.py  my_service.py
test/functional/: Dockerfile
test/sample/: Dockerfile  test-accelbyte-hosted.sh  test-local-hosted.sh
tests/app_tests/services/: __init__.py
